konst/tests/misc_tests/destructure_rec_ui_tests/ref_pat_short_lifetime-err.rs

const fn to_bar<'a>(foo: (u32, u32)) -> (&'a u32, &'a mut u32) {
    konst::destructure_rec!{(ref bar, ref mut baz) = foo}
    (bar, baz)
}


fn main(){}
